--- a/styles/style.css
+++ b/styles/style.css
@@ -180,10 +180,139 @@ nav li a {
     padding-left: 100px;
 }
 
+.deals {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.take p {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    
+
+}
+
+.day {
+    background: url('../resources/Group\ 39.png');
+    width: 1170px;
+    height: 500px;
+    flex-shrink: 0;
+    text-align: center;
+    background-repeat: no-repeat;
+    margin: 135px auto;
+    
+    
+
+}
+
+.max {
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    width: 500px;
+    height: 300px;
+    flex-shrink: 0;
+    
+    
+}
+
+.price {
+    color: #FF5400;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.book {
+    color: #FFFFFF;
+    border-radius: 8px;
+    background: #FF5400;
+    width: 150px;
+    height: 52px;
+    flex-shrink: 0;
+}
+
 .middle {
     width: 1200px;
     height: 600px;
 }
+
+/* .us {
+    color: rgba(19, 19, 24, 0.70);
+
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+
+
+}
+
+.why {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.para {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+
+}
+
+.hotels {
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    width: 300px;
+    height: 100px;
+    flex-shrink: 0;
+}
+
+.best {
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+    width: 300px;
+    height: 100px;
+    flex-shrink: 0;
+    dis
+}
+
+
+.world {
+    color: #131318;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+} */
+
+/* .hand {
+    color: #131318;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+} */
 
 .news {
     display: flex;
@@ -262,7 +391,7 @@ nav li a {
 .icon {
     text-align: center;
     padding: 10px 0;
-   
+
 }
 
 .line {
@@ -270,6 +399,7 @@ nav li a {
     height: 1px;
     background: rgba(19, 19, 24, 0.05);
 }
-.copy{
+
+.copy {
     text-align: center;
 }
