--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,7 @@ nav li a {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    
+
 
 }
 
@@ -208,8 +208,8 @@ nav li a {
     text-align: center;
     background-repeat: no-repeat;
     margin: 135px auto;
-    
-    
+
+
 
 }
 
@@ -221,8 +221,8 @@ nav li a {
     width: 500px;
     height: 300px;
     flex-shrink: 0;
-    
-    
+
+
 }
 
 .price {
@@ -247,7 +247,7 @@ nav li a {
     height: 600px;
 }
 
-/* .us {
+.us {
     color: rgba(19, 19, 24, 0.70);
 
     font-family: Mulish;
@@ -277,23 +277,39 @@ nav li a {
 
 }
 
+.agency {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.give {
+    margin: auto;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    width: 400px;
+    padding: 10px;
+   
+}
+
 .hotels {
     border-radius: 16px;
     border: 1px solid rgba(251, 181, 99, 0.20);
     background: rgba(251, 181, 99, 0.05);
-    width: 300px;
-    height: 100px;
+    width: 400px;
     flex-shrink: 0;
+    padding: 10px;
 }
 
 .best {
     border-radius: 16px;
     border: 1px solid rgba(41, 206, 246, 0.20);
     background: rgba(41, 206, 246, 0.05);
-    width: 300px;
+    width: 400px;
     height: 100px;
     flex-shrink: 0;
-    dis
+    padding: 10px;
 }
 
 
@@ -304,15 +320,16 @@ nav li a {
     font-weight: 800;
     line-height: normal;
 
-} */
+}
 
-/* .hand {
+
+.hand {
     color: #131318;
     font-size: 24px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
-} */
+}
 
 .news {
     display: flex;
@@ -370,7 +387,7 @@ nav li a {
     text-align: center;
 }
 
-.trav {
+.travel {
     color: #FF5400;
     font-size: 32px;
     font-style: normal;
@@ -402,4 +419,180 @@ nav li a {
 
 .copy {
     text-align: center;
+}
+@media only screen and (max-width: 600px)  {
+    
+
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        padding: 10px 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-title {
+        font-size: 24px;
+    }
+
+    nav li {
+        margin: 0;
+        margin-bottom: 10px;
+    }
+
+    .container {
+        height: auto;
+        padding: 50px 20px;
+    }
+
+    .text h1 {
+        font-size: 40px;
+    }
+
+    .text p {
+        font-size: 14px;
+    }
+
+    .btn {
+        padding-top: 20px;
+    }
+
+    .first {
+        padding: 50px;
+    }
+
+    .our {
+        font-size: 30px;
+    }
+
+    .tours {
+        font-size: 14px;
+    }
+
+    .more {
+        width: 120px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .popular {
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .desti {
+        font-size: 30px;
+    }
+
+    .choose p {
+        font-size: 14px;
+    }
+
+    .seven {
+        flex-direction: column;
+    }
+
+    .maldives,
+    .america,
+    .bangla {
+        padding-left: 0;
+        margin-bottom: 20px;
+    }
+
+    .deals {
+        font-size: 30px;
+    }
+
+    .take p {
+        font-size: 14px;
+    }
+
+    .day {
+        width: 100%;
+        margin: 50px auto;
+    }
+
+    .max {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 20px;
+    }
+
+    .price {
+        font-size: 16px;
+    }
+
+    .book {
+        width: 100px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .middle {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .us,
+    .why,
+    .para {
+        font-size: 14px;
+    }
+
+    .agency {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .give,
+    .hotels,
+    .best {
+        width: 100%;
+    }
+
+    .world,
+    .hand {
+        font-size: 20px;
+    }
+
+    .news {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .letter,
+    .id,
+    .subs {
+        font-size: 20px;
+    }
+
+    .hlw {
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .hero,
+    .travel {
+        font-size: 20px;
+    }
+
+    .foot {
+        font-size: 14px;
+    }
+
+    .icon {
+        padding: 10px 0;
+    }
+
+    .line {
+        width: 100%;
+    }
+
+    .copy {
+        font-size: 14px;
+    }
 }
