--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&family=Open+Sans:ital,wght@0,800;1,800&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
-* {
+ *{
+    margin: 0 auto;
     font-family: Mulish;
 }
 
@@ -26,7 +27,7 @@ nav {
     color: #FF5400;
 }
 
-nav>ul {
+nav > ul {
     display: flex;
 }
 
@@ -139,7 +140,7 @@ nav li a {
 
 }
 
-.desti {
+.destination {
     color: #131318;
     text-align: center;
     font-size: 40px;
@@ -420,7 +421,7 @@ nav li a {
 .copy {
     text-align: center;
 }
-@media only screen and (max-width: 600px)  {
+ @media only screen and (max-width: 600px)  { 
     
 
     header {
@@ -458,10 +459,8 @@ nav li a {
     .btn {
         padding-top: 20px;
     }
-
-    .first {
-        padding: 50px;
-    }
+    
+    
 
     .our {
         font-size: 30px;
@@ -469,21 +468,26 @@ nav li a {
 
     .tours {
         font-size: 14px;
+       display: flex;
+       flex-direction: column-reverse;
+      
+        
+        
     }
 
     .more {
-        width: 120px;
-        height: 40px;
+       
         font-size: 14px;
     }
 
     .popular {
-        width: 100%;
-        padding: 20px;
+        max-width: 100%;
+        width: 400px;
+        height: 200px;
         box-sizing: border-box;
     }
 
-    .desti {
+.destination{
         font-size: 30px;
     }
 
@@ -595,4 +599,4 @@ nav li a {
     .copy {
         font-size: 14px;
     }
-}
+} 
